# meu-projeto-python

data-engineering-pyspark/: README.md  pyproject.toml  requirements.txt
data-engineering-pyspark/config/: settings.yaml
data-engineering-pyspark/data/output/pedidos_por_cliente/: .part-00000-98f85327-ea32-4544-aeb4-0cff5c400023-c000.snappy.parquet.crc  part-00000-98f85327-ea32-4544-aeb4-0cff5c400023-c000.snappy.parquet
data-engineering-pyspark/src/: main.py
data-engineering-pyspark/src/config/: .~c9_invoke_ogvOa.py  settings.py
data-engineering-pyspark/src/dataeng_pyspark_data_pipeline.egg-info/: PKG-INFO  SOURCES.txt
data-engineering-pyspark/src/io_utils/: data_handler.py
data-engineering-pyspark/src/pipeline/: pipeline.py
data-engineering-pyspark/src/processing/: transformations.py
data-engineering-pyspark/src/session/: spark_session.py
data-engineering-pyspark/tests/: test_transformations.py
desafio-pyspark/: README.md  pyproject.toml  requirements.txt
desafio-pyspark/src/: main.py
desafio-pyspark/src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
desafio-pyspark/src/config/: settings.py
desafio-pyspark/src/dataeng_pyspark_data_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
desafio-pyspark/src/io_utils/: data_handler.py
desafio-pyspark/src/pipeline/: pipeline.py
desafio-pyspark/src/processing/: transformations.py
desafio-pyspark/src/session/: spark_session.py
desafio-pyspark/tests/: test_transformations.py
